# odgoon-cogs

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  README.md  info.json  pyproject.toml
gooncompile/: __init__.py  _version.py  gooncompile.py  info.json
gooncompile/utils/: appCommands.py  logger.py  misc.py  relay.py
odcompile/: __init__.py  _exceptions.py  info.json  odcompile.py
odcompile/utils/: appCommands.py  misc.py  regex.py  relay.py
