[tool.poetry]
name = "od-cogs"
version = "0.1.0"
description = "Cogs for OpenDream"
authors = ["Crossedfall <ping@crossedfall.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
red-discordbot = "^3.5.2"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.1"

[tool.black]
line-length = 120
