[tool.poetry]
name = "od-cogs"
version = "0.2.0"
description = "Cogs for OpenDream"
authors = ["Crossedfall <ping@crossedfall.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
red-discordbot = "^3.5"
httpx = "^0.24"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0"
black = "^23.3"
pre-commit = "^3.3"
codespell = "^2.2"

[tool.black]
line-length = 120

[tool.codespell]
count = ""
skip = ".git,.venv,*.lock,odcompile/utils/regex.py"
builtin = "clear,rare,code,en-GB_to_en-US"
ignore-words-list = "od,ro"
quiet = 3
